update wording about version line branch

--- a/about/modules/ROOT/pages/version-and-release-policies.adoc
+++ b/about/modules/ROOT/pages/version-and-release-policies.adoc
@@ -23,7 +23,7 @@ Once a release candidate (rc) has been thoroughly tested, the stable release wil
 
 === Version line branches
 
-Each minor version line is managed as a separate branch in the repository.
+Every minor release of Asciidoctor has its own release branch, known as a version line branch (e.g., v2.0.x, v2.1.x, etc).
 These version line branches are named using the pattern `v<major>.<minor>.x` (e.g., v2.0.x, v2.1.x, v3.0.0, etc).
 (The `v` prefix is used to distinguish version line branches and to make matching them using a pattern simpler).
 Patch releases for a minor release are made from these version line branches.
