--- a/about/modules/ROOT/pages/support.adoc
+++ b/about/modules/ROOT/pages/support.adoc
@@ -12,35 +12,22 @@ Please refer to the help section for the respective project to find those detail
 
 [horizontal]
 Platform:: Zulip
-URL:: https://asciidoctor.zulipchat.com
+URL:: https://chat.asciidoctor.org
 
-If you want to ask for help, share feedback, or exchange ideas with fellow community members in real time, please join the project chat.
-The project chat is the preferred means of communication for all Asciidoctor users.
+If you want to ask for help, share feedback, or exchange ideas with fellow community members in real time, please do so in the project chat.
+*The project chat is the preferred means of communication for all Asciidoctor users.*
 
 If you find an ongoing discussion that matches the topic you're interested in, feel free to join that discussion.
-(Hint: please make use of the search feature).
-Otherwise, please post a new topic in the `#users` stream (not the `#community` stream).
+Otherwise, please post a new topic in the `#users` stream (*not* the `#community` stream).
 Only post to a different stream if you understand the stream's purpose and have determined that your topic is suitable for it.
 For example, if you're asking a question specifically about AsciidoctorJ, please post to the `#users/asciidoctorj` stream.
 
-The discussions in the project chat are archived, but there's no guarantee those logs will be saved indefinitely.
+TIP: Please make use of the search feature to find existing topics before starting a new one.
+
+The discussions in the project chat are archived and public.
+There's no guarantee those logs will be saved indefinitely, though we plan keep them as long as we're permitted to do so.
+
 Keep in mind that users participate in the project chat voluntarily, so please respect their time.
-
-[#discuss]
-== Discussion list (aka mailing list)
-
-[horizontal]
-Platform:: Nabble
-URL:: https://discuss.asciidoctor.org
-
-You can also ask for help, share feedback, or exchange ideas with fellow community members over email using the discussion list.
-Before you post to the discussion list for the first time, you must request to join.
-This moderation step helps protect subscribers of the list from receiving off-topic and junk messages.
-
-Since the discussion list relies on email, interaction is always asynchronous.
-Fewer people subscribe to the discussion list compared to other communication channels, so you may find responses to be slower than when using the project chat.
-The advantage of the discussion list is that you can participate using only your email client and it's easier to link to the messages.
-However, we're currently considering phasing out this means of communication.
 
 == Issue tracker
 
@@ -48,13 +35,15 @@ However, we're currently considering phasing out this means of communication.
 Platform:: GitHub
 URL:: https://github.com/asciidoctor/asciidoctor/issues
 
-IMPORTANT: Please file issues for projects other than Asciidoctor core (such as AsciidoctorJ) in the issue tracker for the respective project.
+IMPORTANT: If the issue does not pertain to Asciidoctor core, please file the issue in the issue tracker for the relevant project.
+For example, to file an issue about AsciidoctorJ, please use the issue tracker at https://github.com/asciidoctor/asciidoctorj/issues.
 
-The preferred means of reporting verifiable bugs, regressions, and security vulnerabilities or for making formal change requests is the project issue tracker.
-Please direct general usage questions to the project chat or discussion list.
+The issue tracker is the preferred channel for reporting verifiable bugs, regressions, and security vulnerabilities or for making formal change requests.
+Please direct questions about usage of the software to the project chat instead.
+Please do not comment on closed issues unless you're following up to report whether or not the fix worked.
 
 Any significant change or decision about the project is recorded in the issue tracker.
-The issue tracker is also used for planning releases.
+The issue tracker is also used for planning releases via milestones and labels.
 
 == Social media
 
@@ -65,6 +54,19 @@ URL:: https://twitter.com/asciidoctor
 If you want to share your experience with Asciidoctor or help promote it, we encourage you to post about it on social media.
 When you post about Asciidoctor on Twitter, you can mention the official account for the project, https://twitter.com/asciidoctor[@asciidoctor].
 You can also use the https://twitter.com/search?q=%23asciidoctor[#asciidoctor] hashtag to help others find your post or discover others who are talking about it.
+
+[#discuss]
+== Discussion list (archived)
+
+[horizontal]
+Platform:: Nabble
+URL:: https://discuss.asciidoctor.org
+
+In the past, this project used the discussion list for general communication.
+During that time, community members asked for help, shared feedback, and exchanged ideas with fellow community members over email.
+Since the successful introduction of the <<chat>>, this channel of communication has been archived and is now read only.
+You may continue to use it as a knowledge base.
+However, all new questions, feedback, announcements, and other general discourse should be directed to the project chat.
 
 == Please be considerate
 
