--- a/about/modules/ROOT/pages/history.adoc
+++ b/about/modules/ROOT/pages/history.adoc
@@ -102,5 +102,5 @@ Jul 21, 2020:: AsciiDoc Working Group officially formed +
 see https://www.eclipse.org/lists/asciidoc-wg/msg00113.html
 Dec 13, 2020:: Asciidoctor gem downloaded over 10 million times
 Jan 05, 2021:: Launch of new docs site for Asciidoctor at https://docs.asciidoctor.org
-Mar 03, 2021:: Launch of new project chat for Asciidoctor at https://asciidoctor.zulipchat.com
+Mar 03, 2021:: Launch of new project chat for Asciidoctor at https://chat.asciidoctor.org (hosted on zulipchat.com)
 Apr 20, 2022:: Relaunch of the https://asciidoc.org[asciidoc.org] site to reflect the current status and direction of AsciiDoc under the governance of the AsciiDoc WG
