rename support.adoc to get-help.adoc to correctly set expectations

--- a/about/modules/ROOT/pages/get-help.adoc
+++ b/about/modules/ROOT/pages/get-help.adoc
@@ -1,4 +1,5 @@
 = Get Help
+:page-aliases: support.adoc
 
 To be successful at writing and publishing AsciiDoc content with Asciidoctor, we encourage you to maintain a dialogue with the project maintainers and other community members.
 Don't hesitate to ask questions and discuss any aspects of the project using an appropriate communication channel listed below.
