state that the issue tracker is not a support portal

--- a/about/modules/ROOT/pages/get-help.adoc
+++ b/about/modules/ROOT/pages/get-help.adoc
@@ -55,6 +55,7 @@ For example, to file an issue about AsciidoctorJ, please use the issue tracker a
 
 The issue tracker is the preferred channel for reporting verifiable bugs, regressions, and security vulnerabilities, or for making formal, specific, and well-defined change requests.
 *Please do not ask questions about how to use the software in the issue tracker.*
+The issue tracker is not a support portal.
 Instead, you may direct questions about usage to the <<chat,project chat>>.
 Please do not comment on closed issues unless you're adding additional context, such as to report whether the fix worked for you or how you made use of it.
 If you post an unproductive comment on an open issue, such as "`What's the status of this issue after X years?`", your comment will be deleted.
